--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,6 +7,7 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
+autoloaderNamespaces.custom = "Kilosoft_"
 
 resources.db.adapter = "pdo_mysql"
 resources.db.params.host = "localhost"
