--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,3 +29,13 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.dbname = "kassakaappi"
+
+[teemuki : production]
+phpSettings.display_startup_errors = 1
+phpSettings.display_errors = 1
+resources.frontController.params.displayExceptions = 1
+resources.db.adapter = "pdo_mysql"
+resources.db.params.host = "localhost"
+resources.db.params.username = "roope"
+resources.db.params.password = "pankkiiri123"
+resources.db.params.dbname = "kassakaappi"
