Big time refactoring

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,6 +14,10 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.dbname = "kassakaappi"
+
+kilosoft.user.sessionexpire = 86400
+
+
 [staging : production]
 
 [testing : production]
