--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,8 @@
+file.reference.library-Zend=../../zend/ZendFramework-1.12.0/library/Zend
 file.reference.ZendFramework-library=../../../../../Program Files (x86)/Zend/ZendServer/share/ZendFramework/library
 include.path=\
     ${php.global.include.path}:\
-    ${file.reference.ZendFramework-library}
+    ${file.reference.library-Zend}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
