--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -14,10 +14,9 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "root"
 resources.db.params.dbname = "kassakaappi"
+resources.db.params.charset = "utf8"
 
 kilosoft.user.sessionexpire = 86400
-
-
 [staging : production]
 
 [testing : production]
