Updated database setting

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,8 +11,8 @@ autoloaderNamespaces.custom = "KSoft_"
 
 resources.db.adapter = "pdo_mysql"
 resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = "root"
+resources.db.params.username = "dumpo"
+resources.db.params.password = "as321nndfsAAh"
 resources.db.params.dbname = "kassakaappi"
 resources.db.params.charset = "utf8"
 
